--- a/Anderes.html
+++ b/Anderes.html
@@ -60,7 +60,7 @@
             <img alt="" src="Anderes/BuildYourself/BuildYourselfSign_Anleitung.png" class="img-fluid">
         </div>
         <div class="col-12 col-md-4 col-xl-3 mt-3 d-md-flex flex-md-column justify-content-center">
-            <ul class="list-unstyled">
+            <ul class="list-unstyled mx-auto mx-md-0 d-inline-block d-md-block">
                 <li>
                     <h5 class="font-weight-bold">Oben:</h5>
                     <p>
