Twitch Grafiken und Socialmedia Uebersichtlichkeit

--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -59,8 +59,17 @@ a {
 	color: #0E2036;
 	background-color: #FFFFFF;
 }
-.auto-style61 {
-	color: #FFBF00;
+.auto-style62 {
+	color: #0E2036;
+	background-color: #FFFFFF;
+	font-size: x-large;
+}
+.auto-style63 {
+	font-size: x-large;
+	color: #0E2036;
+}
+.auto-style64 {
+	background-color: #FFFFFF;
 }
 </style>
 </head>
@@ -85,44 +94,54 @@ a {
 <span class="auto-style57">Ihr braucht irgendwas?-&gt;
 <a href="https://goo.gl/forms/0kB4umt1o9Y4HVxg1">
 https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
-</span>
+<br />
+<br />
+<br />
+<span class="auto-style63"><strong><span class="auto-style64">&nbsp;Twitch 
+Panels etc.: </span></strong></span><br />
+<br />
+&nbsp;&nbsp;&nbsp; -<strong>Panels:</strong><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Eckig:
+<a href="SocialMedia/Twitch/EU-Demos.png">Demos</a> |
+<a href="SocialMedia/Twitch/Petition.png">Petition</a> |
+<a href="SocialMedia/Twitch/Spenden.png">Spenden</a><br />
+<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Abgerundet:
+<a href="SocialMedia/Twitch/Abgerundet/2303-Abgerundet.png">23.März</a> |
+<a href="SocialMedia/Twitch/Abgerundet/EU-Demos-Abgerundet.png">Demos</a> |
+<a href="SocialMedia/Twitch/Abgerundet/Petition-Abgerundet.png">Petition</a> |
+<a href="SocialMedia/Twitch/Abgerundet/Spenden-Abgerundet.png">Spenden</a><br />
+<br />
+&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Twitch/Twitch%20Offline.png"><strong>Offline 
+Banner</strong></a></span><br />
+<br />
 <br />
 <br />
 <span class="auto-style57">
-<strong>Facebook Banner für die Demos</strong><br />
+<strong><span class="auto-style62">&nbsp;Facebook Banner: </span></strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="Webseitenstuff/Facebook-HeaderClean3.png"><strong>Allgemein 
+&nbsp;&nbsp;&nbsp; -<a href="Webseitenstuff/Facebook-HeaderClean3.png"><strong>Allgemein 
 (De)</strong></a><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
+&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
 (Fr)</strong></a><br />
-</span><br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/BREMEN.png">Bremen</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DORTMUND.png">Dortmund</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DRESDEN.png">Dresden</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DUESSELDORF.png">Düsseldorf</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HAMBURG.png">Hamburg</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/LEIPZIG.png">Leipzig</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></span><br class="auto-style57" />
 <br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg:
-<a href="SocialMedia/Banner/NUERNBERG.png">FB Header</a> |
-<a href="SocialMedia/NuernbergAnnouncer.png">G<span class="auto-style61">rafik</span></a> 
-(Twitter/Insta....)</span><br />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
+<strong>&nbsp;&nbsp;&nbsp; -Städte:</strong></span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="SocialMedia/Banner/BREMEN.png">Bremen</a> |
+<a href="SocialMedia/Banner/DORTMUND.png">Dortmund</a> |
+<a href="SocialMedia/Banner/DRESDEN.png">Dresden</a> |
+<a href="SocialMedia/Banner/DUESSELDORF.png">Düsseldorf</a>&nbsp; |
+<a href="SocialMedia/Banner/FRANKFURT.png">Frankfurt</a>&nbsp; |
+<a href="SocialMedia/Banner/HAMBURG.png">Hamburg</a></span><br class="auto-style57" />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a href="SocialMedia/Banner/HANNOVER.png">Hannover</a> |
+<a href="SocialMedia/Banner/LEIPZIG.png">Leipzig</a> |
+<a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a> |
+<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a> |
+<a href="SocialMedia/Banner/NUERNBERG.png">Nürnberg</a> |
+<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
 </p>
 
 </body>
