--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -113,6 +113,17 @@ Panels etc.: </span></strong></span><br />
 <a href="SocialMedia/Twitch/Abgerundet/Petition-Abgerundet.png">Petition</a> |
 <a href="SocialMedia/Twitch/Abgerundet/Spenden-Abgerundet.png">Spenden</a><br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hinweise zu den Bildlinks:<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demos/23.März:
+<a href="https://savetheinternet.info/demos">https://savetheinternet.info/demos</a><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Petition:
+<a href="https://www.change.org/savetheinternet">
+https://www.change.org/savetheinternet</a><br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Spenden:
+<a href="https://www.gofundme.com/save-the-internet-info">
+https://www.gofundme.com/save-the-internet-info</a><br />
+<br />
+<br />
 &nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Twitch/Twitch%20Offline.png"><strong>Offline 
 Banner</strong></a></span><br />
 <br />
