--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -71,9 +71,6 @@ a {
 .auto-style64 {
 	background-color: #FFFFFF;
 }
-.auto-style65 {
-	color: #FFFFFF;
-}
 </style>
 </head>
 
@@ -126,20 +123,14 @@ https://www.change.org/savetheinternet</a><br />
 <a href="https://www.gofundme.com/save-the-internet-info">
 https://www.gofundme.com/save-the-internet-info</a><br />
 <br />
-<br />
 &nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Twitch/Twitch%20Offline.png"><strong>Offline 
 Banner</strong></a></span><br />
 <br />
-&nbsp;&nbsp;&nbsp; <span class="auto-style57">-&gt;Beispiel:
-<a href="https://www.twitch.tv/flashy1338"><span class="auto-style65">
-https://www.twitch.tv/flashy1338</span></a> (Eigenwerbung izda)<br />
+&nbsp;&nbsp;&nbsp; <span class="auto-style57">-&gt;<a href="https://www.twitch.tv/flashy1338">Beispiel</a> (Eigenwerbung izda)<br />
 <br />
-&nbsp;&nbsp;&nbsp; <br />
 &nbsp;&nbsp;&nbsp; Ihr könnt auch die <a href="Flyer/Demos">Flyer pdfs</a> in 
 Bilder umwandeln und nutzen, wenn ihr eine bestimmte Demo promoten wollt:</span><br />
-&nbsp; <span class="auto-style57">&nbsp; -&gt;Beispiel:
-<a href="https://www.twitch.tv/save_the_internet_austria">
-<span class="auto-style65">https://www.twitch.tv/save_the_internet_austria</span></a></span>
+&nbsp; <span class="auto-style57">&nbsp; -&gt;<a href="https://www.twitch.tv/save_the_internet_austria">Beispiel</a></span><br />
 <br />
 <br />
 <br />
