--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -71,6 +71,12 @@ a {
 .auto-style64 {
 	background-color: #FFFFFF;
 }
+.auto-style65 {
+	margin-left: 120px;
+}
+.auto-style66 {
+	font-size: small;
+}
 </style>
 </head>
 
@@ -90,7 +96,7 @@ a {
 		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
 	</tr>
 </table>
-<p class="auto-style54" style="width: 876px"><br />
+<p class="auto-style54" style="width: 876px"><br class="auto-style65" />
 <span class="auto-style57">Ihr braucht irgendwas?-&gt;
 <a href="https://goo.gl/forms/0kB4umt1o9Y4HVxg1">
 https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
@@ -113,24 +119,31 @@ Panels etc.: </span></strong></span><br />
 <a href="SocialMedia/Twitch/Abgerundet/Petition-Abgerundet.png">Petition</a> |
 <a href="SocialMedia/Twitch/Abgerundet/Spenden-Abgerundet.png">Spenden</a><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hinweise zu den Bildlinks:<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demos/23.März:
-<a href="https://savetheinternet.info/demos">https://savetheinternet.info/demos</a><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Petition:
-<a href="https://www.change.org/savetheinternet">
-https://www.change.org/savetheinternet</a><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Spenden:
-<a href="https://www.gofundme.com/save-the-internet-info">
-https://www.gofundme.com/save-the-internet-info</a><br />
-<br />
 &nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Twitch/Twitch%20Offline.png"><strong>Offline 
 Banner</strong></a></span><br />
+<span class="auto-style57">
 <br />
-&nbsp;&nbsp;&nbsp; <span class="auto-style57">-&gt;<a href="https://www.twitch.tv/flashy1338">Beispiel</a> (Eigenwerbung izda)<br />
-<br />
-&nbsp;&nbsp;&nbsp; Ihr könnt auch die <a href="Flyer/Demos">Flyer pdfs</a> in 
-Bilder umwandeln und nutzen, wenn ihr eine bestimmte Demo promoten wollt:</span><br />
-&nbsp; <span class="auto-style57">&nbsp; -&gt;<a href="https://www.twitch.tv/save_the_internet_austria">Beispiel</a></span><br />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Hinweise zu den Bildlinks:</span><br class="auto-style66" />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demos/23.März:
+</span>
+<a href="https://savetheinternet.info/demos"><span class="auto-style66">https://savetheinternet.info/demos</span></a><br class="auto-style66" />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Petition:
+</span>
+<a href="https://www.change.org/savetheinternet">
+<span class="auto-style66">https://www.change.org/savetheinternet</span></a><br class="auto-style66" />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Spenden:
+</span>
+<a href="https://www.gofundme.com/save-the-internet-info">
+<span class="auto-style66">https://www.gofundme.com/save-the-internet-info</span></a></span><br class="auto-style66" />
+<br class="auto-style66" />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; </span> <span class="auto-style57">
+<span class="auto-style66">-&gt;</span><a href="https://www.twitch.tv/flashy1338"><span class="auto-style66">Beispiel</span></a><span class="auto-style66"> (Eigenwerbung izda)</span><br class="auto-style66" />
+<br class="auto-style66" />
+<span class="auto-style66">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; Ihr könnt auch die
+</span> <a href="Flyer/Demos"><span class="auto-style66">Flyer pdfs</span></a><span class="auto-style66"> in 
+Bilder umwandeln und nutzen, wenn ihr eine bestimmte Demo promoten wollt:</span></span><br class="auto-style66" />
+<span class="auto-style66">&nbsp; </span> <span class="auto-style57">
+<span class="auto-style66">&nbsp;&nbsp;&nbsp; &nbsp; -&gt;</span><a href="https://www.twitch.tv/save_the_internet_austria"><span class="auto-style66">Beispiel</span></a></span><br />
 <br />
 <br />
 <br />
