--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ Städteübersicht</span></a></span><br />
 <br />
 <span class="auto-style65"><span class="auto-style68">&nbsp;Banner: </span>&nbsp;<br />
 </span> <br />
-</strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>tian_b / 
-Melly / Flashyy<br />
+</strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>
+tian_b / Melly<br />
 </strong>Angaben in Meter<strong>:<br />
 <br />
 -#SAVEYOURINTERNET <br />
@@ -171,6 +171,9 @@ Melly / Flashyy<br />
 <a href="Flyer/Banner/FreiesInternet/6x1_2.pdf">6x1</a> |
 <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a><strong><br />
 <br />
+-Für ein freies Internet (Melly=<br />
+&nbsp;&nbsp;&nbsp;
+</strong><a href="https://we.tl/t-FIrTmPlzwi">2x0,7</a><strong><br />
 <br />
 </strong>Outdated:<strong><br />
 -#SAVEYOURINTERNET<br />
